Fix overflowing of the tabs
This is a follow up for #11866.

In this case when there are too many tabs, they start to push `atom-workspace-axis.vertical` beyond the window width.

--- a/static/workspace-view.less
+++ b/static/workspace-view.less
@@ -38,5 +38,6 @@ atom-workspace {
     display: flex;
     flex: 1;
     flex-direction: column;
+    min-width: 0;
   }
 }
